# ros2-rl-resource-manager

./: .gitignore  README.md  experiment_metrics.py  main.tex  my_speech_project_OS.txt  q_table.json
OS_slide/: main.tex
maps/: my_map.pgm  my_map.yaml
project1_slide/: README.md  main.tex
project_os/: main.tex  references.bib
project_os/sections/: 01_introduction.tex  02_system_overview.tex  04_interface.tex  05_rl_design.tex  06_experiments.tex  07_results.tex
report_project1/: main.tex
report_project1/sections/: 0_title.tex  5_navigation_research.tex  7_conclusion.tex  7_dynamic_obstacles_nav2.tex  8_os_resource_rl.tex  9_acknowledgements.tex  appendix_rviz.tex
sections/: 0_title.tex  1_introduction.tex  2_system_env.tex  3_installation.tex  4_experiments.tex  6_programmatic_control.tex
src/rl_resource_manager/rl_resource_manager/: rl_resource_manager_node.py
src/tb3_nav2_dynamic/: .gitignore  package.xml  setup.cfg  setup.py
src/tb3_nav2_dynamic/launch/: nav2_dynamic.launch.py
src/tb3_nav2_dynamic/tb3_nav2_dynamic/: dynamic_obstacles_node.py  initial_pose_publisher_node.py  patrol_robot.py
src/tb3_reactive_explorer/tb3_reactive_explorer/: reactive_explorer_node.py
